# webapp

./: app.py  config.py  errors.py  main.py  pyproject.toml
static/39c3/: 39c3.css
static/css/: big-controls.css  controls.css  midi-player.css  styles.css
static/js/: midi-player.js  motor-controls.js  stream-controls.js  toast.js  userscript.js  yt-embed.js
templates/: base.html  controls.html  index.html  stream.html  system_update.html
templates/capabilities/: enable.html  list.html
templates/includes/: advanced-controls.html  advanced_controls.html  controls.html  midi-player.html  stream.html  userscript.html
templates/voucher/: create.html  login.html  redeem.html
