[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-htmx>=0.4.0",
    "flask-socketio>=5.5.1",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
